tests/rosetta/out/C/call-a-function-6.error
cc: exit status 1
/tmp/call-a-function-6.c:104:5: error: redefinition of ‘main’
  104 | int main() {
      |     ^~~~
/tmp/call-a-function-6.c:94:5: note: previous definition of ‘main’ with type ‘int()’
   94 | int main() {
      |     ^~~~
